--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -161,3 +161,21 @@ img {
 .footer__copyright {
     color: #000;
 }
+
+
+/* Media Queries */
+
+@media (max-width: 1015px) {
+    .header {
+        padding: 10px 15px;
+        position: relative;
+    }
+
+    .header__nav {
+        padding: 15px;
+        font-size: 16px;
+        position: absolute;
+        right: 0;
+        top: 16px;
+    }
+}
